Fix title pruduct

--- a/views/index.html
+++ b/views/index.html
@@ -49,10 +49,7 @@
     </header>
 
     <main class="products">
-
-        <h3>Sección: Basado en tu última visita</h3>
-
-
+        <h3 class="products-title">Sección: Basado en tu última visita</h3>
         <section class="last-products">
             <article class="products__product">
                 <figure>
